--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,15 @@
 {
   "name": "bambini_trend",
+  "version": "1.0.0",
   "description": "markup",
   "main": "index.js",
   "authors": [
     "DavidHalkin"
   ],
   "license": "ISC",
-  "homepage": "https://github.com/DavidHalkin/bambini_trend"
+  "homepage": "https://github.com/DavidHalkin/bambini_trend",
+  "dependencies": {
+    "fancybox": "^3.1.20",
+    "jquery": "^3.2.1"
+  }
 }
