--- a/package.json
+++ b/package.json
@@ -17,8 +17,17 @@
   },
   "homepage": "https://github.com/DavidHalkin/bambini_trend#readme",
   "devDependencies": {
-    "browser-sync": "^2.18.12",
+    "browser-sync": "latest",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0" 
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-cache": "^0.4.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "imagemin-pngquant": "^5.0.1"
   }
 }
