--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "homepage": "https://github.com/DavidHalkin/bambini_trend",
   "dependencies": {
     "fancybox": "^3.1.20",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "owl.carousel": "^2.2.1"
   }
 }
