--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^5.0.1"
+    "gulp-zip": "^4.0.0",
+    "gulp.spritesmith": "^6.5.1",
+    "imagemin-pngquant": "^5.0.1",
+    "merge-stream": "^1.0.1",
+    "vinyl-buffer": "^1.0.0"
   }
 }
