--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,8 @@
     "fancybox": "^3.1.20",
     "jquery": "^3.2.1",
     "owl.carousel": "^2.2.1"
+  },
+  "devDependencies": {
+    "animate.css": "^3.5.2"
   }
 }
